src/main/java/com/example/demo/controllers/errors/ValidationResponse.java
package com.example.demo.controllers.errors;

public class ValidationResponse {

    private ValidationCode code;

    private String message;

    public ValidationCode getCode() {
        return code;
    }

    public String getMessage() {
        return message;
    }
}
